welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: value ! is not a member of Int
  if( day<4 && day!0  && !vacation){return "7:00"}
                  ^alarmClock:4: error: value ! is not a member of Int
  if( day<4 && day!0 && vacation){return "10:00"}
                  ^